Kubernetes/IstioIngressClass.yaml
# ingressclass-istio.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
