Kubernetes/Frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  selector:
    matchLabels:
      app: React
  template:
    metadata:
      labels:
        app: React
    spec:
      containers:
      - name: react-cont
        image: ahmedatiia11/frontend-react:V1.0.6
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
spec:
  selector:
    app: React
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-svc
            port:
              number: 3000
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: react-svc
      #       port:
      #         number: 3000
